fixing screen change on mobile and small screen width percent

--- a/stylesheets/site.css
+++ b/stylesheets/site.css
@@ -116,13 +116,13 @@ img {
 	}
 }
 
-@media screen and (min-width: 725px) {
+@media handheld, screen and (min-width: 725px) {
 	.mobileHeader {
 		display: none;
 	}
 }
 
-@media screen and (max-width: 725px) {
+@media handheld, screen and (max-width: 725px) {
 	.desktopHeader {
 		display: none;
 	}
